--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup nodejs
-        uses: actions/setup-node@v3
+      - name: Setup npm cache
+        uses: actions/cache@v2
         with:
-          node-version: 16
-          cache: 'npm'
+          path: '~/.npm'
+          key: ${{ runner.os }}-node
+          restore-keys: |
+            ${{ runner.os }}-node
 
       - name: Install Cypress
         run: |
