--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,30 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup npm cache
+        uses: actions/cache@v2
+        with:
+          path: '~/.npm'
+          key: ${{ runner.os }}-node
+          restore-keys: |
+            ${{ runner.os }}-node
+
+      - name: Install Cypress
+        run: |
+          npm install cypress@9.7.0
+          ./node_modules/.bin/cypress install
+
+      - name: Run Cypress
+        run: |
+          ./node_modules/.bin/cypress run
   deploy:
+    needs: [test]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
