Update node version
Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "cypress:open": "npx cypress open",
     "cypress:install": "npx cypress install"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "devDependencies": {
     "cypress": "^15.3.0"
   },
