--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
-          node-version: '22'
+          node-version: '24'
           cache: 'npm'
 
       - name: Install dependencies
@@ -39,11 +39,11 @@ jobs:
 
       - name: Install Cypress
         run: |
-          npx cypress install
+          npx cypress@15.3.0 install
 
       - name: Run Cypress
         run: |
-          npx cypress run --spec "cypress/integration/**/*.js"
+          npx cypress@15.3.0 run --spec "cypress/integration/**/*.js"
 
   deploy:
     needs: [test]
