Remove --spec in cypress run command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Run Cypress
         run: |
-          npx cypress@15.3.0 run --spec "cypress/integration/**/*.js"
+          npx cypress@15.3.0 run
