--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
+      - name: Setup npm cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-24-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-24-
+ 
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
