--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup npm cache
         uses: actions/cache@v4
         with:
-          path: ~/.npm
+          path: '~/.npm'
           key: ${{ runner.os }}-node-24-${{ hashFiles('**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node-24-
