Use npm scripts in package.json
So the same dependency versions will be used and we don't have to update the version strings in many places

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,11 @@ jobs:
 
       - name: Install Cypress
         run: |
-          npx cypress@15.3.0 install
+          npm run cypress:install
 
-      - name: Run Cypress
+      - name: Run test
         run: |
-          npx cypress@15.3.0 run
+          npm test
 
   deploy:
     needs: [test]
