--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           npm run cypress:install
 
-      - name: Run Cypress
+      - name: Run test
         run: |
           npm test
