Upgrade Cypress to version 15 (#70)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,24 +25,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup npm cache
         uses: actions/cache@v4
         with:
           path: '~/.npm'
-          key: ${{ runner.os }}-node
+          key: ${{ runner.os }}-node-24-${{ hashFiles('**/package.json') }}
           restore-keys: |
-            ${{ runner.os }}-node
+            ${{ runner.os }}-node-24-
+ 
+      - name: Setup Node
+        uses: actions/setup-node@v5
+        with:
+          node-version: '24'
+
+      - name: Install dependencies
+        run: |
+          npm install
 
       - name: Install Cypress
         run: |
-          npm install cypress@9.7.0
-          ./node_modules/.bin/cypress install
+          npm run cypress:install
 
-      - name: Run Cypress
+      - name: Run test
         run: |
-          ./node_modules/.bin/cypress run
+          npm test
+
   deploy:
     needs: [test]
     environment:
@@ -51,11 +60,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           # Upload entire repository
           path: '.'
